# xp-util

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt  xputil.wrap
doc/: .gitignore
src/: CMakeLists.txt  impl_intfs.cpp  meson.build
src/include/: CMakeLists.txt
src/include/xputil/: class_util.h  impl_intfs.h  intf_defs.h  on_exit.h
subprojects/: .gitignore  catch2-ex.wrap  catch2.wrap  gsl.wrap
test/: CMakeLists.txt  catch2.h  cls_util_tests.cpp  intf_id_tests.cpp  intf_tests.cpp  meson.build
xputil/: CMakeLists.txt  class_attr.h  class_util.h  impl_intfs.cpp  impl_intfs.h  intf_defs.h  meson.build  on_exit.h
